--- a/configs/visdrone/querydet_train.yaml
+++ b/configs/visdrone/querydet_train.yaml
@@ -39,7 +39,7 @@ MODEL:
     QUERY_INFER: False
 
   CUSTOM:
-    GRADIENT_CHECKPOINT: False
+    GRADIENT_CHECKPOINT: True
     USE_LOOP_MATCHER: True
     FOCAL_LOSS_ALPHAS: [0.25, 0.25, 0.25, 0.25, 0.25, 0.25]
     FOCAL_LOSS_GAMMAS: [2.0, 2.0, 2.0, 2.0, 2.0, 2.0]
@@ -51,7 +51,7 @@ SOLVER:
   BASE_LR: 0.01
   STEPS: (30000, 40000)
   MAX_ITER: 50000
-  IMS_PER_BATCH: 8
+  IMS_PER_BATCH: 4
   AMP:
     ENABLED: True
   CLIP_GRADIENTS:
@@ -61,8 +61,8 @@ SOLVER:
     NORM_TYPE: 2.0
 
 VISDRONE:
-  SHORT_LENGTH: [1200]
-  MAX_LENGTH: 1999
+  SHORT_LENGTH: [800]
+  MAX_LENGTH: 1333
 
 TEST:  
   EVAL_PERIOD: 0
